	
	* proj.[ch]: add more billing rates/types
	
Thu Aug 30 17:00:24 CDT 2001  Linas Vepstas <linas@linas.org>
	
	* design.txt: begin a rudimentary overview of the 
	  internals of GTT
	
	* journal.[ch]: add ability to view & edit journal of 
	  annotated timestamps (via gtkhtml window)
	  
	* phtml.[ch]: add ability to parse gtt-style html markup,
	  and output to aribtrary stream.

2001-08-30  Kjartan Maraas  <kmaraas@gnome.org>

	* menucmd.c: Fix a typo.

Tue Aug 28 20:11:34 CDT 2001  Linas Vepstas <linas@linas.org>

	* main.c: add warning noting file format change.

	* ctree.[ch]: convert old clist display to ctree display for
	  heirarchical projects (sub-projects).  One can drag-n-drop
	  projects to reparent/reorder them.

	* *.[ch] rewire so that project timing data is stored in xml file
	  while true GUI config data is stored in config file

	* proj.[ch] add routines to subtotal time spent in sub-projects.

Fri Aug 24 23:05:16 CDT 2001  Linas Vepstas <linas@linas.org>
	* app.c clist.c gtt.h main.c menucmd.c menus.c proj.c timer.c
	  toolbar.c: add routine gboolean timer_is_running()

	* app.c main.c proj.c: bug fix, sometimes timer doesn't start right.

	* file-io.c, proj.c: split out i/o routines to its own file
	
	* app.c, file-io.c: save and restore the window size and placement

	* file-io.c: save and restore the current project

	* fix bug introduced last week regarding zeroing of day timers.

Fri Aug 17 10:56:14 CDT 2001  Linas Vepstas <linas@linas.org>

	* xml-read.c, xml-write.c: add routines to read, write XML to file.

	* *.[ch] misc cleanup, additions to support above.

Tue Aug 14 19:46:21 CDT 2001  Linas Vepstas <linas@linas.org>

	* *.[ch]: add C structs for storing/maniuplating log data
	  in memory. This includes heirarchical project trees, 
	  and memo strings attached to time intervals.

	* proj.c, clist.c: get rid of home-grown linked list, use glib routines.

	* *.[ch]: add some data hiding in classic oo-style
