@@ -7,6 +7,7 @@ August 2001
   -- Heirarchical projects now supported.   Tree can be re-arranged 
      via drag-n-drop.
   -- Journal is viewable as html.
+  -- Add variety of billing rates
 
 
 Mon Aug 31 00:38:34 CEST 1998
