@@ -1,5 +1,6 @@
 	
-	* proj.[ch]: add more billing rates/types
+	* proj.[ch], xml-read, write: add more billing rates/types, 
+	  add min intervals
 	
 Thu Aug 30 17:00:24 CDT 2001  Linas Vepstas <linas@linas.org>
 	
